# SdFat

./: readme.txt
EmbeddedExample/: CMakeLists.txt  main.cpp
SdFat/: ArduinoStream.h  SdFatConfig.h  SdSpi.h  istream.cpp  istream.h  ostream.h
